--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,33 +17,20 @@
 }
 
 
-
-.debug .about .row .row [class^="col"]{
-    height: calc(100px / 4);
-    
-
-}
-
 .form-control::placeholder{
     color: black;
     opacity: 1;
 }
 
-
-@media screen and (min-width:576px) {
-    .debug .about .row .row [class^="col"]{
-        height: calc(100px / 3);
-       
-    
-    }
-    
-}
-
-
 .jumbotron > .row > .col > img{
     max-height: 300px;
 }
 
+.icons > i{
+    height: 40px;
+    width: 40px;
+    line-height: 20px;
+}
 
 
 
