--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,12 @@
     --color-border-bottom: #CCCCCC;
 }
 
+/* Utility */
+a{
+    color: var(--bg_freelancer_secondary);
+    text-decoration: none;
+}
+
 .bg_freelancer_primary{
     background-color: var(--bg_freelancer_primary);
 }
@@ -16,6 +22,13 @@
     background-color: var(--bg_freelancer_light);
 }
 
+.placeholder{
+    min-height: 3px;
+    opacity: 1;
+    max-width: 100px;
+}
+
+/* Main */
 
 .form-control::placeholder{
     color: black;
